# rdlm

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  research_findings.md
artifacts/: README.md
artifacts/reports/: arc_eval.json  arc_infer_shape_train_eval.json  infer_shape_dos_temporal_calibrated.json  infer_shape_dos_temporal_calibrated_greedy.json
artifacts/reports/arc_infer_shape_debug/: 0000_00576224.json  0001_00576224.json  (+3 more)
artifacts/research/: actionable_synthesis.md  ranked_papers.md  ranked_papers.scored.jsonl  raw_papers.jsonl
artifacts/training/: step_0000000.json
reports/: arc_eval.json  arc_eval_smoke.json
reports/arc_debug/: 0000_00576224.json  0001_00576224.json  0002_00576224.json  0003_03560426.json  0004_03560426.json  0005_03560426.json  0006_05a7bcf2.json  0007_05a7bcf2.json  0008_05a7bcf2.json  0009_0607ce86.json  0010_0607ce86.json  0011_0607ce86.json  0012_0692e18c.json  0013_0692e18c.json  0014_0692e18c.json  0015_070dd51e.json  0016_070dd51e.json  0017_070dd51e.json  0018_08573cc6.json  0019_08573cc6.json  0020_08573cc6.json  0021_09c534e7.json  0022_09c534e7.json  0023_09c534e7.json  0024_0a1d4ef5.json  0025_0a1d4ef5.json  0026_0a1d4ef5.json  0027_0b17323b.json  0028_0b17323b.json  0029_0b17323b.json
scripts/: eval_arc_inference_grid.sh  export_run_backup.sh  gather_research.py  pull_remote_backup.sh  rank_research.py  setup_remote_cuda.sh
src/rdlm/: __init__.py  arc.py  arc_model.py  diffusion_lm.py  tiny_block.py  train.py  train_arc.py  train_diffusion.py  train_tinystories.py  trm.py
tests/: test_arc.py
(+10 files in other folders)
