[project]
name = "tr-dllm"
version = "0.1.0"
description = "Tiny Recursive Diffusion Large Learning Model"
readme = "README.md"
authors = [
    { name = "phongndo", email = "donguyenphong@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "numpy>=2.4.4",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "wandb>=0.26.1",
]

[project.scripts]
tr-dllm = "tr_dllm:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tr_dllm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
